--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "allergiav2" "\0"
+            VALUE "FileDescription", "allergia" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "allergiav2" "\0"
+            VALUE "InternalName", "allergia" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "allergiav2.exe" "\0"
-            VALUE "ProductName", "allergiav2" "\0"
+            VALUE "OriginalFilename", "allergia.exe" "\0"
+            VALUE "ProductName", "allergia" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
